codebird-php - changelog
========================

2.6.0 (not yet released)
+ #67 Don't require cURL, allow stream connections too
+ Use default timeout
+ #69 Add composer/installers to allow install path changes
- Regression: Codebird::getApiMethods removed accidentally in 2.5.0
+ #66 Allow remote media uploads

2.5.0 (2014-06-20)
+ Add section about cacert.pem to README
+ Option to set cURL timeout
+ #42 Allow to get the supported API methods as array
+ #48 Update composer file to jublonet path
+ Update cacert.pem root certificates file
+ #58 support for GET statuses/retweeters/ids
+ #53 Better Proxy HTTP status detection
- #62 Places & Geo API call issue
+ #33 Support internal API methods
+ #59 Support all known API methods
+ Reset bearer token when requesting a new token
+ #61 Return rate limit details with each API call
+ #60 Support uploading multiple media
- #63 Return rate-limiting info only if contained in response
- #57 Don't require consumer key if bearer token is already known

2.4.1 (2013-06-23)
+ #26 Stringify null and boolean parameters
+ Validate Twitter SSL certificate for oauth2/token method

2.4.0 (2013-06-15)
+ Add contributing guidelines
+ rfe #21 JSON return format
+ Support HTTP proxy replies
+ Validate Twitter SSL certificate
+ #23 Readme: Fix authentication sample

2.3.6 (2013-05-12)
+ Add backslash to stdClass construction, due to namespace

2.3.5 (2013-04-30)
+ Fix fatal error:  Class 'Codebird\Exception' not found

2.3.4 (2013-04-28)
+ Fix namespace not properly cased

2.3.3 (2013-04-26)
+ Detect API error responses as XML, see #1
+ OAuth: add support for force_login, screen_name parameters, see #14
+ Add namespace

2.3.2 (2013-04-09)
+ Use protected keyword for methods that may be overriden in extended classes

2.3.1 (2013-03-23)
- Re-remove statuses/sample. It's streaming API, which Codebird doesn't currently support
+ Don't send multipart POST to non-multipart methods, fix issue #8