@@ -7,6 +7,7 @@ codebird-php - changelog
 + #69 Add composer/installers to allow install path changes
 - Regression: Codebird::getApiMethods removed accidentally in 2.5.0
 + #66 Allow remote media uploads
+- #81 CURLOPT_TIMEOUT_MS and CURLOPT_CONNECTTIMEOUT_MS errors on PHP 5.3
 
 2.5.0 (2014-06-20)
 + Add section about cacert.pem to README
